--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             trein en metro reist. In haar observatie focuste ze zich vooral op haar omgeving en het gedrag van de
             mensen. Dit is dan
             ook wat wij interessant vinden om te vertellen.</p>
-            <img src="img/Dataweek visualisatie-06.png">
+        <img src="img/Dataweek visualisatie-06.png">
         <a href="#content"><svg class="arrow bounce-1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50"
                 height="50" viewBox="0 0 172 172" style=" fill:#000000;">
                 <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
@@ -74,15 +74,17 @@
             <article class="dataviz" id="viz-ov">
                 <h2>Hoe en hoeveel reizen de mensen in Nederland?</h2>
                 <p>Percentage afgelegde kilometers in 2019 per vervoersmiddel.</p>
-                <img src="/img/Dataweek visualisatie-03.png" alt="">
-                <a href="#viz-tel"><svg class="arrow-small  bounce-1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30"
-                        height="30" viewBox="0 0 172 172" style=" fill:#000000;">
-                        <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter"
-                            stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none"
-                            font-size="none" text-anchor="none" style="mix-blend-mode: normal">
+                <img src="img/Dataweek visualisatie-03.png" alt="">
+                <a href="#viz-tel"><svg class="arrow-small  bounce-1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                        width="30" height="30" viewBox="0 0 172 172" style=" fill:#000000;">
+                        <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+                            stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                            font-family="none" font-weight="none" font-size="none" text-anchor="none"
+                            style="mix-blend-mode: normal">
                             <path d="M0,172v-172h172v172z" fill="none"></path>
                             <g fill="#ff8f74">
-                                <path d="M16.6625,44.3975l-7.2025,7.2025l76.54,76.54l76.54,-76.54l-7.2025,-7.2025l-69.3375,69.3375z">
+                                <path
+                                    d="M16.6625,44.3975l-7.2025,7.2025l76.54,76.54l76.54,-76.54l-7.2025,-7.2025l-69.3375,69.3375z">
                                 </path>
                             </g>
                         </g>
@@ -97,14 +99,16 @@
                     2021.
                 </p>
                 <img src="/img/datavis-internet.png" alt="" id="dataviz-internet">
-                <a href="#viz-reizigers"><svg class="arrow-small  bounce-1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30"
-                        height="30" viewBox="0 0 172 172" style=" fill:#000000;">
-                        <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter"
-                            stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none"
-                            font-size="none" text-anchor="none" style="mix-blend-mode: normal">
+                <a href="#viz-reizigers"><svg class="arrow-small  bounce-1" xmlns="http://www.w3.org/2000/svg" x="0px"
+                        y="0px" width="30" height="30" viewBox="0 0 172 172" style=" fill:#000000;">
+                        <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+                            stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                            font-family="none" font-weight="none" font-size="none" text-anchor="none"
+                            style="mix-blend-mode: normal">
                             <path d="M0,172v-172h172v172z" fill="none"></path>
                             <g fill="#ff8f74">
-                                <path d="M16.6625,44.3975l-7.2025,7.2025l76.54,76.54l76.54,-76.54l-7.2025,-7.2025l-69.3375,69.3375z">
+                                <path
+                                    d="M16.6625,44.3975l-7.2025,7.2025l76.54,76.54l76.54,-76.54l-7.2025,-7.2025l-69.3375,69.3375z">
                                 </path>
                             </g>
                         </g>
@@ -120,36 +124,40 @@
                 <p>
                     Zie hiernaast de afgelegde afstand met de trein per reismotief in 2019.
                 </p>
-                <img src="/img/datavis-reizigers.png" alt="">
-                <a href="#begin"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24" viewBox="0 0 172 172"
-                    style=" fill:#000000;">
-                    <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter"
-                        stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none"
-                        font-size="none" text-anchor="none" style="mix-blend-mode: normal">
-                        <path d="M0,172v-172h172v172z" fill="none"></path>
-                        <g fill="#666666">
-                            <path
-                                d="M57.33333,21.5l-35.83333,35.83333h28.66667v57.33333c0,19.70486 16.12847,35.83333 35.83333,35.83333h64.5v-14.33333h-64.5c-11.95747,0 -21.5,-9.54253 -21.5,-21.5v-57.33333h28.66667z">
-                            </path>
+                <img src="img/datavis-reizigers.png" alt="">
+                <a href="#begin"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24"
+                        viewBox="0 0 172 172" style=" fill:#000000;">
+                        <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+                            stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                            font-family="none" font-weight="none" font-size="none" text-anchor="none"
+                            style="mix-blend-mode: normal">
+                            <path d="M0,172v-172h172v172z" fill="none"></path>
+                            <g fill="#666666">
+                                <path
+                                    d="M57.33333,21.5l-35.83333,35.83333h28.66667v57.33333c0,19.70486 16.12847,35.83333 35.83333,35.83333h64.5v-14.33333h-64.5c-11.95747,0 -21.5,-9.54253 -21.5,-21.5v-57.33333h28.66667z">
+                                </path>
+                            </g>
                         </g>
-                    </g>
-                </svg> Terug naar boven</a>
+                    </svg> Terug naar boven</a>
             </article>
 
 
         </div>
         <div class="content" id="content">
             <article id="test">
-                <audio src="/sounds/station.mp3" id="station" type="mp3" ></audio>
+                <audio src="sounds/station.mp3" id="station" type="mp3"></audio>
                 <div class="viz-2 js-scroll fade-in-bottom">
-                <div id="trein"><img src="img/Dataweek visualisatie_Tekengebied 1-02.png"
-                        class="js-scroll fade-in-bottom"></div>
-                <div id="perron"><img src="img/perron.png" class="js-scroll fade-in-bottom"></div>
-        </div>
+                    <div id="trein"><img src="img/Dataweek visualisatie_Tekengebied 1-02.png"
+                            class="js-scroll fade-in-bottom"></div>
+                    <div id="perron"><img src="img/perron.png" class="js-scroll fade-in-bottom"></div>
+                </div>
             </article>
         </div>
 
     </div>
+    <footer>
+        <p>Deze pagina is gemaakt voor de Data Week van het project Information Design.</p>
+    </footer>
 
 
 
