--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     Nederlander in
                     2021.
                 </p>
-                <img src="/img/datavis-internet.png" alt="" id="dataviz-internet">
+                <img src="img/datavis-internet.png" alt="" id="dataviz-internet">
                 <a href="#viz-reizigers"><svg class="arrow-small  bounce-1" xmlns="http://www.w3.org/2000/svg" x="0px"
                         y="0px" width="30" height="30" viewBox="0 0 172 172" style=" fill:#000000;">
                         <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
@@ -122,7 +122,7 @@
                     reizigers gaan om iemand te bezoeken en andere nemen de trein om hun sport/hobby te beheersen.
                 </p>
                 <p>
-                    Zie hiernaast de afgelegde afstand met de trein per reismotief in 2019.
+                    Zie hieronder de afgelegde afstand met de trein per reismotief in 2019.
                 </p>
                 <img src="img/datavis-reizigers.png" alt="">
                 <a href="#begin"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24"
@@ -157,6 +157,11 @@
     </div>
     <footer>
         <p>Deze pagina is gemaakt voor de Data Week van het project Information Design.</p>
+        <ul>
+            <li>Michelle Schoen</li>
+            <li>Redouane Ibrahimi</li>
+            <li>Kiara Broekhuizen</li>
+        </ul>
     </footer>
 
 
